# llvm_mlir_toys

./: README.md
kaleidoscope/: basic_optimizations.toy  build.sh  compile_commands.json  custom_op.toy  input.toy  input_incorrect_number.toy  lib_calls.toy  run_tests.sh  statistics.toy  test_custom_op.cpp  test_custom_op.sh  test_statistics.cpp  test_statistics.sh  toy.cpp
standalone/: build.sh
toy/: CMakeLists.txt  README.md  ast.toy  build.sh  emit_ast.sh  emit_mlir.sh  experiment.toy  generate_tblgen.sh  run_tests.sh  test.mlir
toy/include/toy/: CMakeLists.txt  Ops.td  Passes.h
toy/src/: CMakeLists.txt  toyc.cpp
toy/src/mlir/: Dialect.cpp  LowerToAffineLoops.cpp  LowerToLLVM.cpp  MLIRGen.cpp  ShapeInferencePass.cpp  ToyCombine.cpp  ToyCombine.td
toy/tests/: basic.toy  function_calls.toy  functions_shapes_cse_integration.toy  inlined_functions.toy  matmul.toy  redundant_reshapes.toy  reshape_sequence.toy  shape_inference.toy  subtract.toy  transpose_sequence.toy
toy/tests/affine_lowering/: basic.mlir  matmul.mlir  subtract.mlir
toy/tests/jit/: basic.mlir  matmul.mlir  subtract.mlir
toy/tests/llvm_dialect_lowering/: basic.mlir  subtract.mlir
toy/tests/llvm_lowering/: basic.mlir  subtract.mlir
